2008-04-14  Gabor Loki  <loki@inf.u-szeged.hu>

        Reviewed by Geoffrey Garen.

        Bug 18489: Squirrelfish doesn't build on linux
        <https://bugs.webkit.org/show_bug.cgi?id=18489>

        * WebCore.pro: Add JavaScriptCore/VM into include path

2008-04-10  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        Adjusted WebCore JS functions to the new "getConstructData" calling convention.

2008-03-30  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Adjusted WebCore JS functions to the new "getCallData" calling convention.

2008-04-17  David Hyatt  <hyatt@apple.com>

        Fix a leak in ImageBuffer's clearImage method.

        Reviewed by olliej

        * platform/graphics/ImageBuffer.h:
        (WebCore::ImageBuffer::clearImage):

2008-04-17  Antti Koivisto  <antti@apple.com>

        Reviewed by Eric.
        
        https://bugs.webkit.org/show_bug.cgi?id=12438

        More SVG animation:
        
        - Make multiple additive animations work
        - Support animating <use> instance trees

        * svg/SVGAnimateColorElement.cpp:
        (WebCore::SVGAnimateColorElement::SVGAnimateColorElement):
        * svg/SVGAnimateColorElement.h:
        
        Made this AnimateElement subclass. All functionality is now provided by AnimateElement.
        
        * svg/SVGAnimateElement.cpp:
        (WebCore::SVGAnimateElement::determinePropertyType):
        (WebCore::SVGAnimateElement::calculateAnimatedValue):
        (WebCore::SVGAnimateElement::calculateFromAndToValues):
        (WebCore::SVGAnimateElement::calculateFromAndByValues):
        (WebCore::SVGAnimateElement::resetToBaseValue):
        (WebCore::SVGAnimateElement::applyResultsToTarget):
        * svg/SVGAnimateElement.h:
        * svg/SVGAnimateMotionElement.cpp:
        (WebCore::SVGAnimateMotionElement::resetToBaseValue):
        (WebCore::SVGAnimateMotionElement::calculateAnimatedValue):