@@ -1,3 +1,11 @@
+2008-04-30  Geoffrey Garen  <ggaren@apple.com>
+
+        Build fix: #ifdef'd out some code that doesn't work anymore.
+
+        * bindings/objc/WebScriptObject.mm:
+        (+[WebScriptObject throwException:]):
+        (-[WebScriptObject setException:]):
+
 2008-04-14  Gabor Loki  <loki@inf.u-szeged.hu>
 
         Reviewed by Geoffrey Garen.
